--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@dev.mohe/isomorphic-webcrypto",
   "version": "0.0.1",
   "description": "Isomorphic interface for the Node.js v15.0.0 Web Crypto API and the browser Web Crypto API.",
-  "main": "index.mjs",
+  "exports": {
+    "browser": "./browser.mjs",
+    "node": "./nodejs.mjs"
+  },
+  "types": "types.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
