--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dev.mohe/isomorphic-webcrypto",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Isomorphic interface for the Node.js v15.0.0 Web Crypto API and the browser Web Crypto API.",
   "exports": {
     "browser": "./browser.mjs",
@@ -9,6 +9,9 @@
   "types": "types.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=15.0.0"
   },
   "keywords": [
     "isomorphic",
